--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
     <div class="container">
 
         <div class="hero__inner"
-            style="background-image: image-set(url('../images/hero/guy@1x.webp') type('image/webp') 1x, url('../images/hero/guy@2x.webp') type('image/webp') 2x);">
+            style="background-image: url('../images/hero/guy@1x.webp');">
 
             <div class="hero__content">
 
@@ -280,7 +280,7 @@
             <section class="features section" id="features">
     <div class="container">
         <div class="features__inner"
-            style="background-image: image-set(url('../../images/features/food_delivery@1x.webp') type('image/webp') 1x, url('../../images/features/food_delivery@2x.webp') type('image/webp') 2x);">
+            style="background-image: url('../../images/features/food_delivery@1x.webp')">
 
             <div class="features__content">
 
@@ -322,6 +322,7 @@
 
             </div>
         </div>
+    </div>
 </section>
             <section class="restaurant section" id="restaurant">
     <div class="container">
@@ -335,16 +336,16 @@
                     <a class="rest-card__link" href="#">
                         <img class="rest-card__img" src="./images/restaurant/resto_1@x1.webp" alt="Піцца Блейз"
                             width="370" height="300">
-                        <div class="rest-card__box">
-                            <span class="rest-card__title">Blaze Pizza</span>
-                            <span class="icon-mask rest-card__icon--time"></span>
-                            <span class="rest-card__time">11:00 - 22:00</span>
-                            <button class="btn rest-card__btn" type="button">
-                                <span class="sr-only">Додати товар до корзини</span>
-                                <span class="icon-mask rest-card__icon rest-card__icon--arrow"></span>
-                            </button>
-                        </div>
                     </a>
+                    <div class="rest-card__box">
+                        <span class="rest-card__title">Blaze Pizza</span>
+                        <span class="icon-mask rest-card__icon--time"></span>
+                        <span class="rest-card__time">11:00 - 22:00</span>
+                        <button class="btn rest-card__btn" type="button">
+                            <span class="sr-only">Додати товар до корзини</span>
+                            <span class="icon-mask rest-card__icon rest-card__icon--arrow"></span>
+                        </button>
+                    </div>
                 </article>
             </li>
 
@@ -353,16 +354,16 @@
                     <a class="rest-card__link" href="#">
                         <img class="rest-card__img" src="./images/restaurant/resto_2@x1.webp" alt="Піцца Ранчо"
                             width="370" height="300">
-                        <div class="rest-card__box">
-                            <span class="rest-card__title">Pizza Runcho</span>
-                            <span class="icon-mask rest-card__icon--time"></span>
-                            <span class="rest-card__time">12:00 - 21:00</span>
-                            <button class="btn rest-card__btn">
-                                <span class="sr-only">Додати товар до корзини</span>
-                                <span class="icon-mask rest-card__icon rest-card__icon--arrow"></span>
-                            </button>
-                        </div>
                     </a>
+                    <div class="rest-card__box">
+                        <span class="rest-card__title">Pizza Runcho</span>
+                        <span class="icon-mask rest-card__icon--time"></span>
+                        <span class="rest-card__time">12:00 - 21:00</span>
+                        <button class="btn rest-card__btn">
+                            <span class="sr-only">Додати товар до корзини</span>
+                            <span class="icon-mask rest-card__icon rest-card__icon--arrow"></span>
+                        </button>
+                    </div>
                 </article>
             </li>
 
@@ -371,16 +372,16 @@
                     <a class="rest-card__link" href="#">
                         <img class="rest-card__img" src="./images/restaurant/resto_3@x1.webp" alt="Піцца Хат"
                             width="370" height="300">
-                        <div class="rest-card__box">
-                            <span class="rest-card__title">Pizza Hut</span>
-                            <span class="icon-mask rest-card__icon--time"></span>
-                            <span class="rest-card__time">11:00 - 22:00</span>
-                            <button class="btn rest-card__btn">
-                                <span class="sr-only">Додати товар до корзини</span>
-                                <span class="icon-mask rest-card__icon rest-card__icon--arrow"></span>
-                            </button>
-                        </div>
                     </a>
+                    <div class="rest-card__box">
+                        <span class="rest-card__title">Pizza Hut</span>
+                        <span class="icon-mask rest-card__icon--time"></span>
+                        <span class="rest-card__time">11:00 - 22:00</span>
+                        <button class="btn rest-card__btn">
+                            <span class="sr-only">Додати товар до корзини</span>
+                            <span class="icon-mask rest-card__icon rest-card__icon--arrow"></span>
+                        </button>
+                    </div>
                 </article>
             </li>
 
@@ -389,16 +390,16 @@
                     <a class="rest-card__link" href="#">
                         <img class="rest-card__img" src="./images/restaurant/resto_4@x1.webp"
                             alt="Гамбургер Макдональдз" width="370" height="300">
-                        <div class="rest-card__box">
-                            <span class="rest-card__title">McDonald`s</span>
-                            <span class="icon-mask rest-card__icon--time"></span>
-                            <span class="rest-card__time">06:00 - 23:00</span>
-                            <button class="btn rest-card__btn">
-                                <span class="sr-only">Додати товар до корзини</span>
-                                <span class="icon-mask rest-card__icon rest-card__icon--arrow"></span>
-                            </button>
-                        </div>
                     </a>
+                    <div class="rest-card__box">
+                        <span class="rest-card__title">McDonald`s</span>
+                        <span class="icon-mask rest-card__icon--time"></span>
+                        <span class="rest-card__time">06:00 - 23:00</span>
+                        <button class="btn rest-card__btn">
+                            <span class="sr-only">Додати товар до корзини</span>
+                            <span class="icon-mask rest-card__icon rest-card__icon--arrow"></span>
+                        </button>
+                    </div>
                 </article>
             </li>
 
@@ -407,16 +408,16 @@
                     <a class="rest-card__link" href="#">
                         <img class="rest-card__img" src="./images/restaurant/resto_5@x1.webp" alt="Картопля фрі з КФС"
                             width="370" height="300">
-                        <div class="rest-card__box">
-                            <span class="rest-card__title">KFC</span>
-                            <span class="icon-mask rest-card__icon--time"></span>
-                            <span class="rest-card__time">06:00 - 23:30</span>
-                            <button class="btn rest-card__btn">
-                                <span class="sr-only">Додати товар до корзини</span>
-                                <span class="icon-mask rest-card__icon rest-card__icon--arrow"></span>
-                            </button>
-                        </div>
                     </a>
+                    <div class="rest-card__box">
+                        <span class="rest-card__title">KFC</span>
+                        <span class="icon-mask rest-card__icon--time"></span>
+                        <span class="rest-card__time">06:00 - 23:30</span>
+                        <button class="btn rest-card__btn">
+                            <span class="sr-only">Додати товар до корзини</span>
+                            <span class="icon-mask rest-card__icon rest-card__icon--arrow"></span>
+                        </button>
+                    </div>
                 </article>
             </li>
 
@@ -425,16 +426,16 @@
                     <a class="rest-card__link" href="#">
                         <img class="rest-card__img" src="./images/restaurant/resto_6@x1.webp"
                             alt="зображення Стар Бургеру" width="370" height="300">
-                        <div class="rest-card__box">
-                            <span class="rest-card__title">Star Burgers</span>
-                            <span class="icon-mask rest-card__icon--time"></span>
-                            <span class="rest-card__time">09:00 - 21:00</span>
-                            <button class="btn rest-card__btn">
-                                <span class="sr-only">Додати товар до корзини</span>
-                                <span class="icon-mask rest-card__icon rest-card__icon--arrow"></span>
-                            </button>
-                        </div>
                     </a>
+                    <div class="rest-card__box">
+                        <span class="rest-card__title">Star Burgers</span>
+                        <span class="icon-mask rest-card__icon--time"></span>
+                        <span class="rest-card__time">09:00 - 21:00</span>
+                        <button class="btn rest-card__btn">
+                            <span class="sr-only">Додати товар до корзини</span>
+                            <span class="icon-mask rest-card__icon rest-card__icon--arrow"></span>
+                        </button>
+                    </div>
                 </article>
             </li>
         </ul>
@@ -448,7 +449,7 @@
         <div class="review__inner">
             <div class="review__content">
                 <img class="review__img" src="../../images/review/daryna@1x.webp" alt="Щаслива дівчина з гамбургером"
-                    srcset="../../images/review/daryna@2x.webp 2000w" width="300px" height="300px">
+                    srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300" sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
                 <blockquote class="review__blockquote">
 
                     <p class="review__paragraph">
@@ -490,7 +491,7 @@
             <section class="application section" id="application">
     <div class="container">
         <div class="application__inner"
-            style="background-image: image-set(url('../../images/application/get_app@1x.webp') type('image/webp') 1x, url('../../images/application/get_app@2x.webp') type('image/webp') 2x);">
+            style="background-image: url('../../images/application/get_app@1x.webp')">
 
             <div class="application__box">
 
@@ -507,16 +508,14 @@
                     <li class="application__item">
                         <a class="application__link" href="#">
                             <img class="application__marketplace-link" src="../../images/application/app_store@1x.webp"
-                                alt="єпл стор" srcset="../../images/application/app_store@2x.webp 2000w" width="120"
-                                height="40">
+                                alt="єпл стор" srcset="../../images/application/app_store@2x.webp 2000w" width="120" height="40" sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
                         </a>
                     </li>
 
                     <li class="application__item">
                         <a class="application__link" href="#">
                             <img class="application__marketplace-link" src="../../images/application/play_store@2x.webp"
-                                alt="єпл стор" srcset="../../images/application/play_store@2x.webp 2000w" width="135"
-                                height="40">
+                                alt="єпл стор" srcset="../../images/application/play_store@2x.webp 2000w" width="135" height="40" sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
                         </a>
                     </li>
                 </ul>
@@ -623,32 +622,26 @@
                 <ul class="address__list">
 
                     <li class="address__item">
-                        <a class="link address__link" href="#">
-                            <span class="icon-mask address__icon" href="#"
+                        <a class="address__link link">
+                            <span class="icon-mask address__icon"
                                 style="-webkit-mask-image: url('images/icons/sprite.svg#icon-location');"></span>
-                            <span class="address__contact" href="#">
-                                вул. Т.Г.Шевченка, 1
-                            </span>
+                            вул. Т.Г.Шевченка, 1
                         </a>
                     </li>
 
                     <li class="address__item">
-                        <a class="link address__link" href="#">
-                            <span class="icon-mask address__icon" href="#"
+                        <a class="address__link link" href="tel:+380501112233">
+                            <span class="icon-mask address__icon"
                                 style="-webkit-mask-image: url('images/icons/sprite.svg#icon-call');"></span>
-                            <span class="address__contact" href="tel:+380501112233">
-                                380501112233
-                            </span>
+                            380501112233
                         </a>
                     </li>
 
                     <li class="address__item">
-                        <a class="link address__link" href="#">
-                            <span class="icon-mask address__icon" href="#"
+                        <a class="address__link link" href="mailto:support@sfood.com">
+                            <span class="icon-mask address__icon"
                                 style="-webkit-mask-image: url('images/icons/sprite.svg#icon-message');"></span>
-                            <span class="address__contact" href="mailto:support@sfood.com">
-                                support@sfood.com
-                            </span>
+                            support@sfood.com
                         </a>
                     </li>
 
@@ -658,7 +651,7 @@
 
                     <li class="social__item">
                         <a class="social__link" href="#">
-                            <span class="icon-mask social__icon" href="#"
+                            <span class="icon-mask social__icon"
                                 style="-webkit-mask-image: url('images/icons/sprite.svg#icon-facebook');"></span>
                         </a>
                         <span class="sr-only">
@@ -668,7 +661,7 @@
 
                     <li class="social__item">
                         <a class="social__link" href="#">
-                            <span class="icon-mask social__icon" href="#"
+                            <span class="icon-mask social__icon"
                                 style="-webkit-mask-image: url('images/icons/sprite.svg#icon-twitter');"></span>
                         </a>
                         <span class="sr-only">
@@ -678,7 +671,7 @@
 
                     <li class="social__item">
                         <a class="social__link" href="#">
-                            <span class="icon-mask social__icon" href="#"
+                            <span class="icon-mask social__icon"
                                 style="-webkit-mask-image: url('images/icons/sprite.svg#icon-instagram');"></span>
                         </a>
                         <span class="sr-only">
