--- a/src/module/features/_features.html
+++ b/src/module/features/_features.html
@@ -1,7 +1,7 @@
 <section class="features section" id="features">
     <div class="container">
         <div class="features__inner"
-            style="background-image: image-set(url('../../images/features/food_delivery@1x.webp') type('image/webp') 1x, url('../../images/features/food_delivery@2x.webp') type('image/webp') 2x);">
+            style="background-image: url('../../images/features/food_delivery@1x.webp')">
 
             <div class="features__content">
 
@@ -43,4 +43,5 @@
 
             </div>
         </div>
+    </div>
 </section>
