--- a/src/module/footer/_footer.html
+++ b/src/module/footer/_footer.html
@@ -93,32 +93,26 @@
                 <ul class="address__list">
 
                     <li class="address__item">
-                        <a class="link address__link" href="#">
-                            <span class="icon-mask address__icon" href="#"
+                        <a class="address__link link">
+                            <span class="icon-mask address__icon"
                                 style="-webkit-mask-image: url('images/icons/sprite.svg#icon-location');"></span>
-                            <span class="address__contact" href="#">
-                                вул. Т.Г.Шевченка, 1
-                            </span>
+                            вул. Т.Г.Шевченка, 1
                         </a>
                     </li>
 
                     <li class="address__item">
-                        <a class="link address__link" href="#">
-                            <span class="icon-mask address__icon" href="#"
+                        <a class="address__link link" href="tel:+380501112233">
+                            <span class="icon-mask address__icon"
                                 style="-webkit-mask-image: url('images/icons/sprite.svg#icon-call');"></span>
-                            <span class="address__contact" href="tel:+380501112233">
-                                380501112233
-                            </span>
+                            380501112233
                         </a>
                     </li>
 
                     <li class="address__item">
-                        <a class="link address__link" href="#">
-                            <span class="icon-mask address__icon" href="#"
+                        <a class="address__link link" href="mailto:support@sfood.com">
+                            <span class="icon-mask address__icon"
                                 style="-webkit-mask-image: url('images/icons/sprite.svg#icon-message');"></span>
-                            <span class="address__contact" href="mailto:support@sfood.com">
-                                support@sfood.com
-                            </span>
+                            support@sfood.com
                         </a>
                     </li>
 
@@ -128,7 +122,7 @@
 
                     <li class="social__item">
                         <a class="social__link" href="#">
-                            <span class="icon-mask social__icon" href="#"
+                            <span class="icon-mask social__icon"
                                 style="-webkit-mask-image: url('images/icons/sprite.svg#icon-facebook');"></span>
                         </a>
                         <span class="sr-only">
@@ -138,7 +132,7 @@
 
                     <li class="social__item">
                         <a class="social__link" href="#">
-                            <span class="icon-mask social__icon" href="#"
+                            <span class="icon-mask social__icon"
                                 style="-webkit-mask-image: url('images/icons/sprite.svg#icon-twitter');"></span>
                         </a>
                         <span class="sr-only">
@@ -148,7 +142,7 @@
 
                     <li class="social__item">
                         <a class="social__link" href="#">
-                            <span class="icon-mask social__icon" href="#"
+                            <span class="icon-mask social__icon"
                                 style="-webkit-mask-image: url('images/icons/sprite.svg#icon-instagram');"></span>
                         </a>
                         <span class="sr-only">
