--- a/src/module/hero/_hero.html
+++ b/src/module/hero/_hero.html
@@ -2,7 +2,7 @@
     <div class="container">
 
         <div class="hero__inner"
-            style="background-image: image-set(url('../images/hero/guy@1x.webp') type('image/webp') 1x, url('../images/hero/guy@2x.webp') type('image/webp') 2x);">
+            style="background-image: url('../images/hero/guy@1x.webp');">
 
             <div class="hero__content">
 
