--- a/src/module/review/_review.html
+++ b/src/module/review/_review.html
@@ -6,7 +6,7 @@
         <div class="review__inner">
             <div class="review__content">
                 <img class="review__img" src="../../images/review/daryna@1x.webp" alt="Щаслива дівчина з гамбургером"
-                    srcset="../../images/review/daryna@2x.webp 2000w" width="300px" height="300px">
+                    srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300" sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
                 <blockquote class="review__blockquote">
 
                     <p class="review__paragraph">
