--- a/src/module/application/_application.html
+++ b/src/module/application/_application.html
@@ -1,7 +1,7 @@
 <section class="application section" id="application">
     <div class="container">
         <div class="application__inner"
-            style="background-image: image-set(url('../../images/application/get_app@1x.webp') type('image/webp') 1x, url('../../images/application/get_app@2x.webp') type('image/webp') 2x);">
+            style="background-image: url('../../images/application/get_app@1x.webp')">
 
             <div class="application__box">
 
@@ -18,16 +18,14 @@
                     <li class="application__item">
                         <a class="application__link" href="#">
                             <img class="application__marketplace-link" src="../../images/application/app_store@1x.webp"
-                                alt="єпл стор" srcset="../../images/application/app_store@2x.webp 2000w" width="120"
-                                height="40">
+                                alt="єпл стор" srcset="../../images/application/app_store@2x.webp 2000w" width="120" height="40" sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
                         </a>
                     </li>
 
                     <li class="application__item">
                         <a class="application__link" href="#">
                             <img class="application__marketplace-link" src="../../images/application/play_store@2x.webp"
-                                alt="єпл стор" srcset="../../images/application/play_store@2x.webp 2000w" width="135"
-                                height="40">
+                                alt="єпл стор" srcset="../../images/application/play_store@2x.webp 2000w" width="135" height="40" sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
                         </a>
                     </li>
                 </ul>
