--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
         <nav class="menu">
 
-            <a class="logo" href="#header">
+            <a class="logo header__logo" href="#header">
                 <img class="logo__img" src="./images/logo.svg" alt="Логотип компанії" width="200" height="39">
             </a>
 
@@ -195,7 +195,7 @@
                     <article class="product-card">
                         <a class="link product-card__link" href="#">
                             <img class="product-card__img" src="./images/categories/5@1x.webp"
-                                alt="фотографыя чікен бургера" width="140" height="140">
+                                alt="фотографія чікен бургера" width="140" height="140">
                             <h3 class="link product-card__title">Чікен бургер</h3>
                             <span class="product-card__price">180 грн.</span>
                         </a>
@@ -260,7 +260,7 @@
                     <article class="product-card">
                         <a class="link product-card__link" href="#">
                             <img class="product-card__img" src="./images/categories/5@1x.webp"
-                                alt="фотографыя чікен бургера" width="140" height="140">
+                                alt="фотографія чікен бургера" width="140" height="140">
                             <h3 class="link product-card__title">Чікен бургер</h3>
                             <span class="product-card__price">180 грн.</span>
                         </a>
