--- a/src/module/features/_features.html
+++ b/src/module/features/_features.html
@@ -1,7 +1,6 @@
 <section class="features section" id="features">
     <div class="container">
-        <div class="features__inner"
-            style="background-image: url('../../images/features/food_delivery@1x.webp')">
+        <div class="features__inner" style="background-image: url('../../images/features/food_delivery@1x.webp')">
 
             <div class="features__content">
 
@@ -20,19 +19,16 @@
                 <ul class="features__list">
                     <li class="features__item">
                         <span class="icon-mask features__icon features__icon--timer"></span>
-                        <span class="features__des"></span>
                         Швидка доставка за 15 хвилин
                     </li>
 
                     <li class="features__item">
                         <span class="icon-mask features__icon features__icon--delivery"></span>
-                        <span class="features__des"></span>
                         Чемні кур’єри
                     </li>
 
                     <li class="features__item">
                         <span class="icon-mask features__icon features__icon--restorant"></span>
-                        <span class="features__desc"></span>
                         Більше 500 закладів
                     </li>
                 </ul>
