--- a/src/module/footer/_footer.html
+++ b/src/module/footer/_footer.html
@@ -18,7 +18,7 @@
                     </label>
 
                     <button class="btn form__btn" type="submit">
-                        <span class="icon-mask form__icon--telegram"></span>
+                        <span class="icon-mask form__btn--icon"></span>
                         Підписатися
                     </button>
 
@@ -93,7 +93,7 @@
                 <ul class="address__list">
 
                     <li class="address__item">
-                        <a class="address__link link">
+                        <a class="address__link link" href="#">
                             <span class="icon-mask address__icon"
                                 style="-webkit-mask-image: url('images/icons/sprite.svg#icon-location');"></span>
                             вул. Т.Г.Шевченка, 1
@@ -122,32 +122,32 @@
 
                     <li class="social__item">
                         <a class="social__link" href="#">
+                            <span class="sr-only">
+                                Відкрити сторінку Facebook
+                            </span>
                             <span class="icon-mask social__icon"
                                 style="-webkit-mask-image: url('images/icons/sprite.svg#icon-facebook');"></span>
                         </a>
-                        <span class="sr-only">
-                            Відкрити сторінку Facebook
-                        </span>
                     </li>
 
                     <li class="social__item">
                         <a class="social__link" href="#">
+                            <span class="sr-only">
+                                Відкрити сторінку Twitter
+                            </span>
                             <span class="icon-mask social__icon"
                                 style="-webkit-mask-image: url('images/icons/sprite.svg#icon-twitter');"></span>
                         </a>
-                        <span class="sr-only">
-                            Відкрити сторінку Twitter
-                        </span>
                     </li>
 
                     <li class="social__item">
                         <a class="social__link" href="#">
+                            <span class="sr-only">
+                                Відкрити сторінку Instagram
+                            </span>
                             <span class="icon-mask social__icon"
                                 style="-webkit-mask-image: url('images/icons/sprite.svg#icon-instagram');"></span>
                         </a>
-                        <span class="sr-only">
-                            Відкрити сторінку Instagram
-                        </span>
                     </li>
 
                 </ul>
