--- a/src/module/header/_header.html
+++ b/src/module/header/_header.html
@@ -32,11 +32,11 @@
                 </li>
 
                 <li class="user-nav__item">
-                    <button class="user-nav__btn" type="button">
+                    <button class="user-nav__btn icon icon--cart" type="button">
                         <span class="sr-only">
                             Відкрити корзину
                         </span>
-                        <span class="icon-mask user-nav__icon user-nav__icon--cart"></span>
+                        <!-- <span class="icon-mask user-nav__icon user-nav__icon--cart"></span> -->
                         <span class="user-nav__number">4</span>
                     </button>
                 </li>
