--- a/src/module/hero/_hero.html
+++ b/src/module/hero/_hero.html
@@ -1,20 +1,21 @@
 <section class="hero section" id="hero">
     <div class="container">
 
-        <div class="hero__inner"
-            style="background-image: url('../images/hero/guy@1x.webp');">
+        <div class="hero__inner" style="background-image: url('../images/hero/guy@1x.webp');">
 
             <div class="hero__content">
 
                 <h2 class="hero__title">
                     Доставка
-                    <span class="hero__title__color">за 15 ХВИЛИН</span>
+                    <span class="color-orange">за 15 ХВИЛИН</span>
                 </h2>
 
-                <p class="hero__text">
-                    Найшвидший сервіс доставки їжі у вашому місті. Якщо запізнемось - то доставка за наш
-                    рахунок
-                </p>
+                <div class="hero__text">
+                    <p>
+                        Найшвидший сервіс доставки їжі у вашому місті. Якщо запізнемось - то доставка за наш
+                        рахунок
+                    </p>
+                </div>
 
                 <button class="btn hero__btn" type="button">
                     Замовити
