--- a/src/module/index.html
+++ b/src/module/index.html
@@ -8,6 +8,7 @@
         <main class="main">
             @include('./hero/_hero.html')
             @include('./categories/_categories.html')
+            @include('./productlist/_productlist.html')
             @include('./features/_features.html')
             @include('./restaurant/_restaurant.html')
             @include('./review/_review.html')
