--- a/src/module/review/_review.html
+++ b/src/module/review/_review.html
@@ -6,25 +6,27 @@
         <div class="review__inner">
             <div class="review__content">
                 <img class="review__img" src="../../images/review/daryna@1x.webp" alt="Щаслива дівчина з гамбургером"
-                    srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300" sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
+                    srcset="../../images/review/daryna@2x.webp 2000w" width="300" height="300"
+                    sizes="(max-width: 600px) 100vw, (max-width: 1200px) 50vw, 1000px">
                 <blockquote class="review__blockquote">
 
-                    <p class="review__paragraph">
-                        SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті. Дуже зручний сайт
-                        та
-                        застосунок. Їхні доставники дуже ввічливі та пунктуальні. Компанія часто проводить акції та
-                        дарує
-                        знижки на доставку - однозначно рекомендую!
-                    </p>
+                    <div class="review__paragraph">
+                        <p>
+                            SimpleFood - одна з найкращих служб доставки продуктів з ресторанів у місті. Дуже зручний
+                            сайт
+                            та
+                            застосунок. Їхні доставники дуже ввічливі та пунктуальні. Компанія часто проводить акції та
+                            дарує
+                            знижки на доставку - однозначно рекомендую!
+                        </p>
+                    </div>
 
-                    <footer>
-                        <cite class="review__author">
-                            Дарина
-                        </cite>
-                        <span class="review__caption">
-                            Поціновувачка смачної їжі
-                        </span>
-                    </footer>
+                    <cite class="review__author">
+                        Дарина
+                    </cite>
+                    <span class="review__caption">
+                        Поціновувачка смачної їжі
+                    </span>
                 </blockquote>
             </div>
 
