--- a/src/module/application/_application.html
+++ b/src/module/application/_application.html
@@ -15,13 +15,11 @@
 
                 <ul class="application__list">
                     <li class="application__item">
-                        <a class="application__link application__apple" href="#">
-                        </a>
+                        <a class="application__link application__link--apple" href="#"></a>
                     </li>
 
                     <li class="application__item">
-                        <a class="application__link application__google" href="#">
-                        </a>
+                        <a class="application__link application__link--google" href="#"></a>
                     </li>
                 </ul>
 
