--- a/src/module/features/_features.html
+++ b/src/module/features/_features.html
@@ -18,17 +18,17 @@
 
                 <ul class="features__list">
                     <li class="features__item">
-                        <span class="icon-mask features__icon features__icon--timer"></span>
+                        <span class="icon icon--features icon--timer"></span>
                         Швидка доставка за 15 хвилин
                     </li>
 
                     <li class="features__item">
-                        <span class="icon-mask features__icon features__icon--delivery"></span>
+                        <span class="icon icon--features icon--delivery"></span>
                         Чемні кур’єри
                     </li>
 
                     <li class="features__item">
-                        <span class="icon-mask features__icon features__icon--restorant"></span>
+                        <span class="icon icon--features icon--restorant"></span>
                         Більше 500 закладів
                     </li>
                 </ul>
