--- a/src/module/footer/_footer.html
+++ b/src/module/footer/_footer.html
@@ -17,8 +17,7 @@
                         <span class="sr-only">Впишіть ваш імейл</span>
                     </label>
 
-                    <button class="btn form__btn" type="submit">
-                        <span class="icon-mask form__btn--icon"></span>
+                    <button class="btn form__btn icon icon--telegram" type="submit">
                         Підписатися
                     </button>
 
@@ -93,25 +92,25 @@
                 <ul class="address__list">
 
                     <li class="address__item">
-                        <a class="address__link link" href="#">
-                            <span class="icon-mask address__icon"
-                                style="-webkit-mask-image: url('images/icons/sprite.svg#icon-location');"></span>
+                        <a class="address__link link icon icon--address icon--location" href="#">
+                            <!-- <span class="icon-mask address__icon"
+                                style="-webkit-mask-image: url('images/icons/sprite.svg#icon-location');"></span> -->
                             вул. Т.Г.Шевченка, 1
                         </a>
                     </li>
 
                     <li class="address__item">
-                        <a class="address__link link" href="tel:+380501112233">
-                            <span class="icon-mask address__icon"
-                                style="-webkit-mask-image: url('images/icons/sprite.svg#icon-call');"></span>
+                        <a class="address__link link icon icon--address icon--call" href="tel:+380501112233">
+                            <!-- <span class="icon-mask address__icon"
+                                style="-webkit-mask-image: url('images/icons/sprite.svg#icon-call');"></span> -->
                             380501112233
                         </a>
                     </li>
 
                     <li class="address__item">
-                        <a class="address__link link" href="mailto:support@sfood.com">
-                            <span class="icon-mask address__icon"
-                                style="-webkit-mask-image: url('images/icons/sprite.svg#icon-message');"></span>
+                        <a class="address__link link icon icon--address icon--message" href="mailto:support@sfood.com">
+                            <!-- <span class="icon-mask address__icon"
+                                style="-webkit-mask-image: url('images/icons/sprite.svg#icon-message');"></span> -->
                             support@sfood.com
                         </a>
                     </li>
@@ -121,32 +120,32 @@
                 <ul class="social">
 
                     <li class="social__item">
-                        <a class="social__link" href="#">
+                        <a class="social__link icon icon--social icon--facebook" href="#">
                             <span class="sr-only">
                                 Відкрити сторінку Facebook
                             </span>
-                            <span class="icon-mask social__icon"
-                                style="-webkit-mask-image: url('images/icons/sprite.svg#icon-facebook');"></span>
+                            <!-- <span class="icon-mask social__icon"
+                                style="-webkit-mask-image: url('images/icons/sprite.svg#icon-facebook');"></span> -->
                         </a>
                     </li>
 
                     <li class="social__item">
-                        <a class="social__link" href="#">
+                        <a class="social__link icon icon--social icon--twitter" href="#">
                             <span class="sr-only">
                                 Відкрити сторінку Twitter
                             </span>
-                            <span class="icon-mask social__icon"
-                                style="-webkit-mask-image: url('images/icons/sprite.svg#icon-twitter');"></span>
+                            <!-- <span class="icon-mask social__icon"
+                                style="-webkit-mask-image: url('images/icons/sprite.svg#icon-twitter');"></span> -->
                         </a>
                     </li>
 
                     <li class="social__item">
-                        <a class="social__link" href="#">
+                        <a class="social__link icon icon--social icon--instagram" href="#">
                             <span class="sr-only">
                                 Відкрити сторінку Instagram
                             </span>
-                            <span class="icon-mask social__icon"
-                                style="-webkit-mask-image: url('images/icons/sprite.svg#icon-instagram');"></span>
+                            <!-- <span class="icon-mask social__icon"
+                                style="-webkit-mask-image: url('images/icons/sprite.svg#icon-instagram');"></span> -->
                         </a>
                     </li>
 
