--- a/src/module/header/_header.html
+++ b/src/module/header/_header.html
@@ -23,11 +23,10 @@
 
             <ul class="user-nav">
                 <li class="user-nav__item">
-                    <button class="user-nav__btn" type="button">
+                    <button class="user-nav__btn icon icon--search" type="button">
                         <span class="sr-only">
                             Почати пошук
                         </span>
-                        <span class="icon-mask user-nav__icon user-nav__icon--search"></span>
                     </button>
                 </li>
 
@@ -36,7 +35,6 @@
                         <span class="sr-only">
                             Відкрити корзину
                         </span>
-                        <!-- <span class="icon-mask user-nav__icon user-nav__icon--cart"></span> -->
                         <span class="user-nav__number">4</span>
                     </button>
                 </li>
